[package]
name = "amm-proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_proxy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
spl-token = { version="~3.5.0", features = [ "no-entrypoint" ] }
amm-anchor = {path = "../../../../amm-anchor"}
